# physarum-polycephalum

./: .gitignore  CMakeLists.txt  README.md
cmake/: Libraries.cmake
include/: PP_Debug.h  PP_FileReader.h  PP_Shader.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: CMakeLists.txt  glad.c
shaders/: Agent.glsl  Fragment.glsl  Test.glsl  Vertex.glsl
src/: CMakeLists.txt  PP_FileReader.c  PP_Shader.c  main.c
